# signalweave

./: .gitignore  Dockerfile  README.md  agent.yaml  main.py  pyproject.toml
docs/: HOW-TO-USE.md  RULES_FORMAT.md
signalweave/: __init__.py  app.py  instructions.txt  paths.py
signalweave/checks/: __init__.py  __main__.py  cli.py  conditions.py  engine.py  expressions.py  fields.py  loader.py  models.py  operators.py  paths.py  validation.py
signalweave/skills/annuity-beneficiary-designation/: SKILL.md
signalweave/skills/annuity-beneficiary-designation/references/: rules.yaml
signalweave/skills/annuity-full-surrender/: SKILL.md
signalweave/skills/annuity-full-surrender/references/: rules.yaml
signalweave/skills/health-claim-adjudication/: SKILL.md
signalweave/skills/health-claim-adjudication/references/: rules.yaml
signalweave/skills/life-insurance-underwriting/: SKILL.md
signalweave/skills/life-insurance-underwriting/references/: rules.yaml
signalweave/sources/: __init__.py  base.py  db_source.py  file_source.py  memory_source.py  rest_source.py
signalweave/sources/data/: underwriting_rates.csv
signalweave/tools/: __init__.py  actions.py  authorization.py  beneficiary.py  checks_runner.py  claims.py  eligibility.py  fraud.py  life_underwriting.py  provider.py  surrender.py
tests/: test_expressions.py  test_sources.py
